# knowledge-base

./: .gitignore  Makefile  README.md  pyproject.toml  pyrightconfig.json  pytest.ini  shell.py  uv.toml
agents/chat/: pyproject.toml
api/: depend.py
api/entrypoint/: factory.py  main.py
api/knowledge_base/: factory.py  tags.py
api/knowledge_base/v1/: __init__.py  chat.py  chat_agent.py  chat_capability.py  collection.py  config.py  document.py  file_source.py
api/knowledge_base/v2/: __init__.py
api/service/account/: schema.py
api/service/auth/: helper.py  schema.py
api/service/collection/: schema.py
api/service/config/: schema.py
api/service/document/: schema.py
api/service/file_source/: schema.py
api/service/resource/: helper.py  schema.py
api/service/role/: schema.py
api/user_center/: factory.py  tags.py
api/user_center/v1/: __init__.py  account.py  auth.py  common.py  resource.py  role.py
api/user_center/v2/: __init__.py
config/: default.py  main.py
constant/: format.py  regex.py  symbol.py  validate.py
core/: api.py  context.py  exception.py  logger.py  middleware.py  response.py  schema.py  types.py
deploy/docker/: back-end-base.Dockerfile  back-end.Dockerfile
docs/: chat-review-and-refactor-proposal.md  chat_architecture.md
enhance/: epydantic.py  monkey_patch.py
etc/: template.yaml
ext/: register.py
ext/document_parser/: README.md  __init__.py  pyproject.toml
ext/document_parser/config/: __init__.py  engine_registry.py
ext/document_parser/core/: __init__.py  engine_base.py  parse_result.py  parser.py
ext/document_parser/engines/: plain.py
ext/document_parser/engines/amarkitdown/: __init__.py  amarkitdown.py
ext/document_parser/engines/ocr/: paddleocr.py  tesseract.py
ext/document_parser/engines/office/: engines.py
ext/document_parser/engines/pdf/: pdfplumber.py  pymupdf.py
ext/document_parser/engines/structured/: engines.py
ext/document_parser/engines/web/: engines.py  url.py
ext/document_parser/processors/: __init__.py  base.py  cleaners.py  deduplicator.py  sanitizers.py
ext/embedding/: __init__.py  base.py  exceptions.py  factory.py  pyproject.toml  types.py
ext/embedding/providers/: __init__.py  openai.py  types.py
ext/ext_celery/: __init__.py  app.py  main.py  pyproject.toml  worker.py
ext/ext_httpx/: main.py  monitor.py  pyproject.toml
ext/ext_redis/: helper.py  keys.py  main.py  pyproject.toml
ext/ext_tortoise/: curd.py  enums.py  main.py  pyproject.toml
ext/ext_tortoise/base/: fields.py  models.py  validators.py
ext/ext_tortoise/migrate/: env.py
ext/ext_tortoise/migrate/knowledge_base/: 0_20260112105416_init.py  0_20260114171933_init.py  0_20260116122850_init.py  0_20260302154114_init.py  0_20260310103852_init.py  0_20260317135244_init.py  0_20260325112049_init.py  0_20260331140729_init.py  1_20260112134247_update.py  1_20260306155251_update.py  1_20260317170025_update.py  2_20260112142006_update.py  2_20260318122937_update.py  3_20260319111133_update.py  4_20260319165438_update.py
ext/ext_tortoise/migrate/user_center/: 0_20250518121707_init.py  0_20260117151411_init.py  0_20260331140721_init.py
ext/ext_tortoise/models/: knowledge_base.py  user_center.py
ext/file_source/: __init__.py  base.py  exceptions.py  factory.py  pyproject.toml  types.py
ext/file_source/providers/: __init__.py  aliyun_oss.py  local.py  minio.py  s3.py  sharepoint.py
ext/indexing/: __init__.py  base.py  exceptions.py  factory.py  main.py  models.py  pyproject.toml  types.py
ext/indexing/providers/: __init__.py  elasticsearch.py  milvus.py  types.py
ext/llm/: __init__.py  base.py  exceptions.py  factory.py  pyproject.toml  types.py
ext/llm/chain/: __init__.py  agent.py  base.py  chain.py  exceptions.py  llm.py  memory.py  output_parser.py  prompt.py  tool.py
ext/llm/providers/: __init__.py  anthropic.py  azure_openai.py  deepseek.py  openai.py
ext/text_chunker/: __init__.py  pyproject.toml
ext/text_chunker/config/: __init__.py  strategy_config.py  strategy_presets.py
ext/text_chunker/core/: __init__.py  chunk_result.py  chunker.py  coordinate_mapper.py
ext/text_chunker/examples/: usage_examples.py
ext/text_chunker/strategies/: __init__.py  base.py  delimiter_based.py  heading_based.py  json_based.py  length_based.py
ext/workflow/: README.md  __init__.py  demo_tasks.py  exceptions.py  file_process_tasks.py  manager.py  pyproject.toml  quick_start.py  scheduler.py  tasks.py  template.py  test.py
locales/zh/LC_MESSAGES/: validate.po
service/: depend.py
service/account/: schema.py
service/auth/: helper.py  schema.py
service/chat/: __init__.py  enums.py  platform_service.py
service/chat/agent/: __init__.py  repository.py  schema.py  service.py
service/chat/application/: __init__.py  service.py  websocket_session.py
service/chat/capability/: __init__.py  registry.py  repository.py  router.py  schema.py  service.py
service/chat/domain/: __init__.py  common.py  context.py  conversation.py  errors.py  resources.py  schema.py
service/chat/examples/: usage_examples.py
service/chat/execution/: __init__.py  agents.py  manager.py  registry.py  steps.py  tooling.py
service/chat/runtime/: __init__.py  context.py  engine.py  function_tools.py  mcp_executor.py  mcp_stdio_server.py  planning.py  prompting.py  retrieval.py  session.py  step_context.py  tool_executor.py  trace_manager.py
service/collection/: helper.py  schema.py
service/document/: helper.py  schema.py
service/embedding_model/: schema.py
service/file_source/: schema.py
service/indexing_backend/: schema.py
service/llm_model/: __init__.py  factory.py  schema.py  types.py
service/llm_model_langchain/: __init__.py  factory.py  model.py
service/resource/: helper.py  schema.py
service/role/: schema.py
tests/: .env.template  conftest.py
tests/files/: test.csv  test.docx  test.html  test.json  test.md  test.pptx  test.txt  test.xlsx
tests/indexing/: conftest.py  test_milvus_partition_and_json.py
util/: decorator.py  encrypt.py  general.py  graph.py  route.py  token.py
(+102 files in other folders)
