[project]
name = "fastapi-starter"
description = "FastApi Start Kit"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.co" },
]
requires-python = ">=3.13.0"
version = "0.1.0"
dependencies = [
    "fastapi==0.135.1",
    "python-multipart==0.0.22",
    "starlette-context==0.5.1",
    "pydantic-settings==2.13.1",
    "orjson==3.11.7",
    "pycryptodomex==3.23.0",
    "passlib==1.7.4",
    "bcrypt==3.2.2", # pin
    "gunicorn==25.1.0",
    "uvicorn[standard]==0.41.0",
    "uvloop==0.22.1; sys_platform == 'linux'",  # uvicorn
    "httptools>=0.7.1",    # uvicorn
    # >>>>>>>
    "python-jose[cryptography]==3.5.0",
    "cachetools==7.0.4",
    "captcha==0.7.1",

    # ext workspace members
    "document-parser[all]",
    "embedding",
    "ext-celery",
    "ext-httpx",
    "ext-redis",
    "ext-tortoise",
    "file-source[all]",
    "indexing[all]",
    "llm[all]",
    "text-chunker",
    "workflow",
]


[tool.uv.workspace]
members = [
    "ext/document_parser",
    "ext/embedding",
    "ext/ext_celery",
    "ext/ext_httpx",
    "ext/ext_redis",
    "ext/ext_tortoise",
    "ext/file_source",
    "ext/indexing",
    "ext/llm",
    "ext/text_chunker",
    "ext/workflow",
]

[tool.uv.sources]
document-parser = { workspace = true }
embedding = { workspace = true }
ext-celery = { workspace = true }
ext-httpx = { workspace = true }
ext-redis = { workspace = true }
ext-tortoise = { workspace = true }
file-source = { workspace = true }
indexing = { workspace = true }
llm = { workspace = true }
text-chunker = { workspace = true }
workflow = { workspace = true }


[project.optional-dependencies]
ipython = [
    "ipython==8.15.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "black",
    "isort",
    "ruff",
    "freezegun",
    "httpretty",
    "factory-boy",
    "hypothesis",
    "mimesis",
    "mypy",
]

[tool.isort]
atomic = true
profile = "black"
use_parentheses = true
ensure_newline_before_comments = true

[tool.black]
line-length = 118
target-version = [
    "py313",
]

[tool.ruff]
select = [
    "E",
    "W",
    "F",
    "UP",
    "B",
    "ANN",
    "ASYNC",
    "COM",
    "C4",
    "DTZ",
    "T10",
    "EXE",
    "ISC",
    "ICN",
    "G",
    "PIE",
    "Q",
    "RSE",
    "RET",
    "SIM",
    "TID",
    "TD",
    "PD",
    "PLC",
    "PLE",
    "PLW",
    "FLY",
    "NPY",
]
ignore = [
    "B008",
    "ANN101",
    "ANN102",
    "ANN002",
    "ANN003",
    "F401",
]
fixable = [
    "A",
    "B",
    "C",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "Q",
    "S",
    "T",
    "W",
    "ANN",
    "ARG",
    "BLE",
    "COM",
    "DJ",
    "DTZ",
    "EM",
    "ERA",
    "EXE",
    "FBT",
    "ICN",
    "INP",
    "ISC",
    "NPY",
    "PD",
    "PGH",
    "PIE",
    "PL",
    "PT",
    "PTH",
    "PYI",
    "RET",
    "RSE",
    "RUF",
    "SIM",
    "SLF",
    "TCH",
    "TID",
    "TRY",
    "UP",
    "YTT",
]
unfixable = []
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "tests",
]
line-length = 120
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
target-version = "py311"

[tool.ruff.per-file-ignores]

[tool.ruff.mccabe]
max-complexity = 10

[tool.mypy]
python_version = "3.11"
platform = "darwin"
plugins = [
    "pydantic.mypy",
]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "static",
    "tests",
]
follow_imports = "silent"
warn_redundant_casts = true
check_untyped_defs = true
no_implicit_reexport = true
ignore_missing_imports = true
show_absolute_path = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.aerich]
tortoise_orm = "ext.ext_tortoise.migrate.env.TORTOISE_ORM_CONFIG"
location = "ext/ext_tortoise/migrate"
src_folder = "./."
