[project]
name = "chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "panhongqi", email = "hypofiasco@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents/chat"]
