[project]
name = "document-parser"
version = "1.0.0"
requires-python = ">=3.9"
description = "Document parsing library with multiple engine support"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

# 核心依赖（必需）
dependencies = [
    "pydantic==2.0.0",
    "loguru==0.7.3",
]

# 可选依赖组
[project.optional-dependencies]
pdf = [
    "PyMuPDF==1.27.2",
    "pdfplumber==0.11.9",
]
office = [
    "python-docx==1.2.0",
    "python-pptx==1.0.2",
    "openpyxl==3.1.5",
]
ocr = [
    "paddlepaddle==3.3.0",
    "paddleocr==3.4.0",
    "pytesseract==0.3.13",
    "pdf2image==1.17.0",
    "Pillow==12.1.1",
]
web = [
    "trafilatura==2.0.0",
    "markitdown[all]==0.1.5",
]
structured = [
    "pandas==3.0.1",
]

# 所有依赖（用于方便安装）
all = [
    "document-parser[pdf,office,ocr,web,structured]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/document_parser"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
