[project]
name = "embedding"
version = "1.0.0"
requires-python = ">=3.9"
description = "Embedding model integrations"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

dependencies = [
    "pydantic==2.0.0",
    "loguru==0.7.3",
    "httpx==0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/embedding"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
