[project]
name = "ext-celery"
version = "1.0.0"
requires-python = ">=3.9"
description = "Celery integration extensions"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

dependencies = [
    "celery>=5.4.0",
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/ext_celery"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
