[project]
name = "file-source"
version = "1.0.0"
requires-python = ">=3.9"
description = "File storage abstraction layer (S3, MinIO, Aliyun OSS)"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

dependencies = [
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
    "aiofiles==25.1.0",
]

[project.optional-dependencies]
s3 = [
    "aiobotocore>=3.1.0",
]
minio = [
    "minio>=7.0.0",
]
aliyun = [
    "oss2>=2.19.0",
]

all = [
    "file-source[s3,minio,aliyun]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/file_source"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
