[project]
name = "llm"
version = "1.0.0"
requires-python = ">=3.9"
description = "LLM provider integrations (OpenAI, Anthropic, etc.)"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

dependencies = [
    "pydantic>=2.0.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]

all = [
    "llm[openai,anthropic]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/llm"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
