[project]
name = "text-chunker"
version = "1.0.0"
requires-python = ">=3.9"
description = "Text chunking strategies for document processing"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

dependencies = [
    "pydantic>=2.0.0",
    "loguru==0.7.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/text_chunker"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
