[project]
name = "workflow"
version = "1.0.0"
requires-python = ">=3.9"
description = "Workflow execution engine and task management"
authors = [
    { name = "phoenix", email = "hypofiasco@gmail.com" },
]

dependencies = [
    "celery==5.6.2",
    "pydantic==2.0.0",
    "loguru==0.7.3",
    "networkx==3.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ext/workflow"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
